--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "firebase": "^7.5.0",
     "node-sass": "^4.13.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "next",
+    "react-dom": "next",
     "react-redux": "^7.1.3",
     "react-redux-firebase": "^3.0.5",
     "react-router-dom": "^5.1.2",
