--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "dependencies": {
     "firebase": "^7.5.0",
     "node-sass": "^4.13.0",
-    "react": "next",
-    "react-dom": "next",
-    "react-redux": "^7.1.3",
-    "react-redux-firebase": "^3.0.5",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-next": "0.0.1",
+    "react-redux": "^7.1.0-rc.1",
+    "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
