--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-next": "0.0.1",
-    "react-redux": "^7.1.0-rc.1",
+    "react-redux": "^5.1.2",
     "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
